# practice-sensor-program

./: CMakeLists.txt  Main.qml  main.cpp
android/: AndroidManifest.xml
